# dandi_s3_log_parser

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy_daily_tests.yml  deploy_tests_on_pull_request.yml  publish_to_pypi_on_github_release.yml  testing.yml  testing_dev.yml  testing_live_services.yml
src/dandi_s3_log_parser/: __init__.py  _bin_all_reduced_s3_logs_by_object_key.py  _bin_reduced_logs_by_object_key.py  _buffered_text_reader.py  _command_line_interface.py  _config.py  _dandi_s3_log_file_parser.py  _dandi_s3_log_file_reducer.py  _dandiset_mapper.py  _error_collection.py  _globals.py  _ip_utils.py  _log_utils.py  _map_all_reduced_s3_logs_to_dandisets.py  _map_binned_s3_logs_to_dandisets.py  _order_and_anonymize_parsed_logs.py  _order_parsed_logs.py  _s3_log_file_bin_by_key.py  _s3_log_file_parser.py  _s3_log_file_reducer.py  _s3_log_line_parser.py  command_line_interface.py
src/dandi_s3_log_parser/testing/: __init__.py  _helpers.py
test_live_services/: test_map_reduced_logs_to_all_dandisets.py
test_live_services/examples/mapped_to_dandiset_example_0/binned_logs/zarr/: cb65c877-882b-4554-8fa1-8f4e986e13a6.tsv
test_live_services/examples/mapped_to_dandiset_example_0/expected_output/000003/: draft.tsv
test_live_services/examples/mapped_to_dandiset_example_0/expected_output/000108/: draft.tsv
test_live_services/examples/mapped_to_dandiset_example_0/reduced_logs/zarr/: cb65c877-882b-4554-8fa1-8f4e986e13a6.tsv
test_live_services/test_mapping/: test_map_all_reduced_s3_logs_to_dandisets.py
test_live_services/test_mapping/examples/mapped_to_dandisets_example_0/binned_logs/zarr/: cb65c877-882b-4554-8fa1-8f4e986e13a6.tsv
test_live_services/test_mapping/examples/mapped_to_dandisets_example_0/expected_output/000003/: dandiset_summary_by_day.tsv
test_live_services/test_mapping/examples/mapped_to_dandisets_example_0/expected_output/000013/: dandiset_summary_by_asset.tsv  dandiset_summary_by_day.tsv  draft.tsv
test_live_services/test_mapping/examples/mapped_to_dandisets_example_0/expected_output/000108/: dandiset_summary_by_day.tsv  draft.tsv
tests/: test_bin_dandi_raw_s3_log.py  test_buffered_text_reader.py  test_dandi_s3_log_parser.py  test_map_reduced_logs_to_all_dandisets.py  test_order_and_anonymize.py  test_order_parsed_logs.py  test_output_sorting.py  test_parse_all_dandi_raw_s3_logs.py  test_parse_all_dandi_raw_s3_logs_parallel.py  test_parse_dandi_raw_s3_log.py  test_parse_dandi_raw_s3_log_bad_lines.py  test_reduce_all_dandi_raw_s3_logs.py  test_reduce_all_dandi_raw_s3_logs_parallel.py  test_reduce_dandi_raw_s3_log.py  test_reduce_dandi_raw_s3_log_bad_lines.py
tests/examples/mapped_to_dandiset_example_0/expected_output/000003/: 0.210812.1448.tsv  0.230629.1955.tsv
tests/examples/mapped_to_dandiset_example_0/expected_output/000013/: 0.220126.2143.tsv  draft.tsv
tests/examples/mapped_to_dandiset_example_0/reduced_logs/: blobs_a7b032b8-1e31-429f-975f-52a28cec6629.tsv
tests/examples/order_and_anonymize_example_0/expected_output/: blobs_11ec8933-1456-4942-922b-94e5878bb991.tsv  blobs_a7b032b8-1e31-429f-975f-52a28cec6629.tsv
tests/examples/order_and_anonymize_example_0/unordered_parsed_logs/: blobs_11ec8933-1456-4942-922b-94e5878bb991.tsv  blobs_a7b032b8-1e31-429f-975f-52a28cec6629.tsv
tests/examples/ordered_example_0/expected_output/: blobs_11ec8933-1456-4942-922b-94e5878bb991.tsv  blobs_a7b032b8-1e31-429f-975f-52a28cec6629.tsv
tests/examples/ordered_example_1/expected_output/: blobs_11ec8933-1456-4942-922b-94e5878bb991.tsv  blobs_a7b032b8-1e31-429f-975f-52a28cec6629.tsv
tests/examples/ordered_example_2/expected_output/: blobs_0801d996-200e-4173-ab49-d1784427e96a.tsv
tests/examples/parsed_example_0/expected_output/: blobs_11ec8933-1456-4942-922b-94e5878bb991.tsv  blobs_a7b032b8-1e31-429f-975f-52a28cec6629.tsv
tests/examples/parsed_example_1/expected_output/: blobs_11ec8933-1456-4942-922b-94e5878bb991.tsv  blobs_a7b032b8-1e31-429f-975f-52a28cec6629.tsv
tests/examples/parsed_example_2/expected_output/: blobs_0801d996-200e-4173-ab49-d1784427e96a.tsv  blobs_11ec8933-1456-4942-922b-94e5878bb991.tsv
tests/examples/unordered_example_0/expected_output/: blobs_11ec8933-1456-4942-922b-94e5878bb991.tsv
tests/examples/unordered_example_0/unordered_parsed_logs/: blobs_11ec8933-1456-4942-922b-94e5878bb991.tsv  blobs_a7b032b8-1e31-429f-975f-52a28cec6629.tsv
tests/test_binning/: test_bin_all_dandi_raw_s3_logs.py  test_bin_dandi_raw_s3_log.py  test_bin_reduced_s3_logs_by_object_key.py  test_reduce_all_dandi_raw_s3_logs_parallel.py  test_reduce_dandi_raw_s3_log_bad_lines.py  test_reduce_raw_s3_log.py
tests/test_reduction/: test_reduce_all_dandi_raw_s3_logs.py  test_reduce_all_dandi_raw_s3_logs_parallel.py  test_reduce_dandi_raw_s3_log_bad_lines.py  test_reduce_raw_s3_log.py  test_reduce_raw_s3_log_bad_lines.py
(+28 files in other folders)
